# cinnog

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile.toml  README.md  netlify.toml
app/: Cargo.toml
app/src/: lib.rs
app/src/components/: navigation.rs
data_layer/: Cargo.toml
data_layer/src/: generator.rs  lib.rs
end2end/: playwright.config.ts
end2end/tests/: example.spec.ts
frontend/: Cargo.toml
frontend/src/: lib.rs
generator/: Cargo.toml
generator/src/: main.rs
people/: paul.ron  stephan.ron  valentin.ron
server/: Cargo.toml
server/src/: main.rs
src/: app.rs  datalayer.rs  generator.rs  lib.rs  loaders.rs  main.rs  world.rs
src/loaders/: markdown.rs  ron.rs
style/: main.scss
