[package]
name = "cinnog"
version = "0.1.0"
edition = "2021"

[dependencies]
#leptos = { path = "../leptos/leptos", features = ["nightly", "experimental-islands"] }
leptos = { git = "https://github.com/NiklasEi/leptos", branch = "compatibility_own_ssg_workflow", version = "0.5", features = ["experimental-islands"] }
bevy_ecs = {  version = "0.12" }

serde = {  version = "1", features = ["derive"] }
ron = "0.8.1"

axum = { version = "0.6", optional = true }
tokio = { version = "1.33.0", features = ["full"], optional = true }
tower = { version = "0.4.13", features = ["full"], optional = true }
tower-http = { version = "0.4", features = ["full"], optional = true }
#leptos_axum = { path = "../leptos/integrations/axum", features = ["experimental-islands"], optional = true }
leptos_axum = { git = "https://github.com/NiklasEi/leptos", branch = "compatibility_own_ssg_workflow", version = "0.5", features = ["experimental-islands"], optional = true }
#leptos_router = { path = "../leptos/router", optional = true }
leptos_router = { git = "https://github.com/NiklasEi/leptos", branch = "compatibility_own_ssg_workflow", version = "0.5", optional = true }
tokio-util = {version = "0.7", features = ["rt"], optional = true }

[features]
development = []
generator = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:leptos_axum", "dep:leptos_router", "dep:tokio-util"]
