[package]
name = "cinnog"
version = "0.4.0-dev"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Data layer and helper methods for static site generation with Leptos"
repository = "https://github.com/NiklasEi/cinnog"
homepage = "https://github.com/NiklasEi/cinnog"
documentation = "https://docs.rs/cinnog"
keywords = ["ssg", "leptos", "ecs"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
#leptos = { path = "../leptos/leptos", features = ["experimental-islands"] }
leptos = { version = "0.6", features = ["experimental-islands"] }
#leptos_axum = { path = "../leptos/integrations/axum", features = ["experimental-islands"], optional = true }
leptos_axum = { version = "0.6", features = ["experimental-islands"], optional = true }
#leptos_router = { path = "../leptos/router", optional = true }
leptos_router = { version = "0.6", optional = true }

#bevy_ecs = {  path = "../bevy/crates/bevy_ecs" }
bevy_ecs = {  version = "0.14" }
#bevy_app = {  path = "../bevy/crates/bevy_app" }
bevy_app = {  version = "0.14" }

axum = { version = "0.7", optional = true }
tokio = { version = "1.33.0", features = ["full"], optional = true }
tower = { version = "0.4.13", features = ["full"], optional = true }
tower-http = { version = "0.5", features = ["full"], optional = true }
tokio-util = {version = "0.7", features = ["rt"], optional = true }

serde = { version = "1", features = ["derive"], optional = true }
ron = { version = "0.8.1", optional = true }
gray_matter = { version = "0.2.6", optional = true }
pulldown-cmark = { version = "0.10.2", optional = true }

[features]
development = []
generator = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:leptos_axum", "dep:leptos_router", "dep:tokio-util"]
ron = ["dep:serde", "dep:ron"]
markdown = ["dep:serde", "dep:gray_matter", "dep:pulldown-cmark"]
