[package]
name = "cinnog"
version = "0.4.0"
authors = ["Niklas Eicker <git@nikl.me>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Data layer and helper methods for static site generation with Leptos"
repository = "https://github.com/NiklasEi/cinnog"
homepage = "https://github.com/NiklasEi/cinnog"
documentation = "https://docs.rs/cinnog"
keywords = ["ssg", "leptos", "ecs"]
categories = ["web-programming"]
readme = "README.md"

[dependencies]
leptos = { version = "0.7.0" }
leptos_axum = { version = "0.7.0", optional = true }
leptos_router = { version = "0.7.0", optional = true }
#leptos = { path = "../leptos/leptos" }
#leptos_axum = { path = "../leptos/integrations/axum", optional = true }
#leptos_router = { path = "../leptos/router", optional = true }

bevy_ecs = {  version = "0.15" }
bevy_app = {  version = "0.15" }
#bevy_ecs = {  path = "../bevy/crates/bevy_ecs" }
#bevy_app = {  path = "../bevy/crates/bevy_app" }

axum = { version = "0.7", optional = true }
tokio = { version = "1.33.0", features = ["full"], optional = true }
tower = { version = "0.5", features = ["full"], optional = true }
tower-http = { version = "0.6", features = ["full"], optional = true }
tokio-util = {version = "0.7", features = ["rt"], optional = true }

serde = { version = "1", features = ["derive"], optional = true }
ron = { version = "0.8.1", optional = true }
gray_matter = { version = "0.2.6", optional = true }
pulldown-cmark = { version = "0.12", optional = true }

[features]
development = []
generator = ["dep:axum", "dep:tokio", "dep:tower", "dep:tower-http", "dep:leptos_axum", "dep:leptos_router", "dep:tokio-util"]
ron = ["dep:serde", "dep:ron"]
markdown = ["dep:serde", "dep:gray_matter", "dep:pulldown-cmark"]
