[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
data_layer = { path = "../data_layer" }

leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true

tracing.worspace = true

bevy_ecs.workspace = true
bevy_core.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr"]
