[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
data_layer = { path = "../data_layer" }

leptos.workspace = true
leptos_meta.workspace = true
#leptos_router = { path = "../leptos/router", features = ["nightly"] }
leptos_router = { git = "https://github.com/NiklasEi/leptos", branch = "compatibility_own_ssg_workflow", version = "0.5", features = ["nightly"] }

tracing.workspace = true

bevy_ecs.workspace = true
bevy_core.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate", "data_layer/hydrate"]
ssr = ["leptos/ssr", "leptos_meta/ssr", "leptos_router/ssr", "data_layer/ssr"]
