[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { workspace = true, features = [ "hydrate" ] }
app = { path = "../app", features = ["hydrate"] }

console_error_panic_hook.workspace = true
wasm-bindgen.workspace = true

[features]
development = []