[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
data_layer = {path = "../data_layer" }
bevy_core.workspace = true
actix-web.workspace = true

[features]
development = ["data_layer/development"]
